oxiplate/tests/broken/cow_str/uncowable.stderr
error[E0599]: the method `to_cow_str` exists for reference `&&ToCowStrWrapper<'_, Foo>`, but its trait bounds were not satisfied
 --> tests/broken/cow_str/uncowable.rs:22:30
  |
  19 | struct Foo;
     | ---------- doesn't satisfy `Foo: FastCowStr<'_>` or `Foo: ToString`
...
  22 | #[oxiplate_inline(r#"{{ raw: >message | respond(>"world") }}"#)]
     |                              ^^^^^^^^ method cannot be called on `&&ToCowStrWrapper<'_, Foo>` due to unsatisfied trait bounds
     |
     = note: the following trait bounds were not satisfied:
             `Foo: FastCowStr<'_>`
             which is required by `&ToCowStrWrapper<'_, Foo>: ToCowStr<'_>`
             `Foo: ToString`
             which is required by `&&ToCowStrWrapper<'_, Foo>: ToCowStr<'_>`
note: the traits `FastCowStr` and `ToString` must be implemented
    --> $WORKSPACE/oxiplate-traits/src/cow_str.rs
     |
 133 | pub trait FastCowStr<'a> {
     | ^^^^^^^^^^^^^^^^^^^^^^^^
     |
    ::: $RUST/alloc/src/string.rs
     |
     | pub trait ToString {
     | ^^^^^^^^^^^^^^^^^^
